force-app/main/default/objects/ssot__QuoteProduct__dlm/fields/ssot__QuotedQuantity__c.field-meta.xml
<CustomField>
    <fullName>ssot__QuotedQuantity__c</fullName>
    <label>Quoted Quantity</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>QuotedQuantity</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <required>true</required>
    <scale>3</scale>
    <type>Number</type>
</CustomField>