force-app/main/default/objects/ssot__QuoteProduct__dlm/fields/ssot__QuoteId__c.field-meta.xml
<CustomField>
    <fullName>ssot__QuoteId__c</fullName>
    <label>Quote</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>QuoteId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>