force-app/main/default/objects/ssot__QuoteProduct__dlm/fields/ssot__QuoteProduct_QuoteId_map_Quote_Id_N_1__c.field-meta.xml
<CustomField>
    <fullName>ssot__QuoteProduct_QuoteId_map_Quote_Id_N_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QuoteProduct_QuoteId_map_Quote_Id_N_1</label>
    <referenceTo>ssot__Quote__dlm</referenceTo>
    <relationshipLabel>QuoteProduct_QuoteId_map_Quote_Id_N_1</relationshipLabel>
    <relationshipName>QuoteProduct_QuoteId_map_Quote_Id_N_1</relationshipName>
    <type>Lookup</type>
</CustomField>