force-app/main/default/objects/ssot__QuoteProduct__dlm/fields/ssot__rel_1711688038150_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1711688038150_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QuoteProduct_PriceBookEntryId_map_Pr_rel</label>
    <referenceTo>ssot__PriceBookEntry__dlm</referenceTo>
    <relationshipLabel>QuoteProduct_PriceBookEntryId_map_Pr_rel</relationshipLabel>
    <relationshipName>rel_1711688038150_end</relationshipName>
    <type>Lookup</type>
</CustomField>