force-app/main/default/objects/ssot__QuoteProduct__dlm/fields/ssot__rel_1718545870238_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1718545870238_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QuoteProduct_ProductId_map_Product_I_rel</label>
    <referenceTo>ssot__Product__dlm</referenceTo>
    <relationshipLabel>QuoteProduct_ProductId_map_Product_I_rel</relationshipLabel>
    <relationshipName>rel_1718545870238_end</relationshipName>
    <type>Lookup</type>
</CustomField>